crates/rusvelte_parser/tests/attributes/snapshots/snapshot__attributes__success@attribute-containing-solidus.svelte.snap
---
source: crates/rusvelte-parser/tests/attributes/mod.rs
expression: root
input_file: crates/rusvelte-parser/tests/attributes/inputs/attribute-containing-solidus.svelte
---
{
  "type": "Root",
  "css": null,
  "start": 0,
  "end": 41,
  "fragment": {
    "type": "Fragment",
    "nodes": [
      {
        "type": "RegularElement",
        "start": 0,
        "end": 41,
        "name": "a",
        "attributes": [
          {
            "type": "Attribute",
            "start": 3,
            "end": 30,
            "name": "href",
            "value": [
              {
                "type": "Text",
                "start": 8,
                "end": 30,
                "raw": "https://www.google.com",
                "data": "https://www.google.com"
              }
            ]
          }
        ],
        "fragment": {
          "type": "Fragment",
          "nodes": [
            {
              "type": "Text",
              "start": 31,
              "end": 37,
              "raw": "Google",
              "data": "Google"
            }
          ]
        }
      }
    ]
  },
  "module": null,
  "instance": null
}
