crates/rusvelte_parser/tests/attributes/snapshots/snapshot__attributes__success@attribute-shorthand.svelte.snap
---
source: crates/rusvelte_parser/tests/attributes/mod.rs
expression: root
input_file: crates/rusvelte_parser/tests/attributes/inputs/attribute-shorthand.svelte
snapshot_kind: text
---
{
  "type": "Root",
  "css": null,
  "start": 0,
  "end": 16,
  "fragment": {
    "type": "Fragment",
    "nodes": [
      {
        "type": "RegularElement",
        "start": 0,
        "end": 16,
        "name": "div",
        "attributes": [
          {
            "type": "Attribute",
            "start": 5,
            "end": 9,
            "name": "id",
            "value": {
              "type": "ExpressionTag",
              "start": 6,
              "end": 8,
              "expression": {
                "type": "Identifier",
                "start": 6,
                "end": 8,
                "name": "id"
              }
            }
          }
        ],
        "fragment": {
          "type": "Fragment",
          "nodes": []
        }
      }
    ]
  },
  "module": null,
  "instance": null,
  "options": null
}
