crates/rusvelte_parser/tests/attributes/snapshots/snapshot__attributes__success@attribute-spread.svelte.snap
---
source: crates/rusvelte_parser/tests/attributes/mod.rs
expression: root
input_file: crates/rusvelte_parser/tests/attributes/inputs/attribute-spread.svelte
snapshot_kind: text
---
{
  "type": "Root",
  "css": null,
  "start": 0,
  "end": 22,
  "fragment": {
    "type": "Fragment",
    "nodes": [
      {
        "type": "RegularElement",
        "start": 0,
        "end": 22,
        "name": "div",
        "attributes": [
          {
            "type": "SpreadAttribute",
            "start": 5,
            "end": 15,
            "expression": {
              "type": "Identifier",
              "start": 9,
              "end": 14,
              "name": "props"
            }
          }
        ],
        "fragment": {
          "type": "Fragment",
          "nodes": []
        }
      }
    ]
  },
  "module": null,
  "instance": null,
  "options": null
}
